array.island.Island.scala.error
Erreur de compilation :
Island:6: error: value lenght is not a member of Array[Int]
  for(i<-1 to num.lenght){
                  ^Island:13: error: value lenght is not a member of Array[Int]
    for(i<-1 to num.lenght){
                    ^Island:18: error: ambiguous reference to overloaded definition,
both method % in class Int of type (x: Char)Int
and  method % in class Int of type (x: Byte)Int
match expected type ?
    if(b%2=0){
        ^